refactor: deletedDate 조건을 애플리케이션 레벨로 이동하여 불필요한 보조 인덱스 제거