@@ -3,6 +3,8 @@ package com.onmoim.server.post.service;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 
 import java.util.Arrays;
 import java.util.List;
@@ -13,12 +15,18 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import com.onmoim.server.post.repository.PostLikeRepository;
 import com.onmoim.server.post.entity.vo.PostLikeInfo;
 import com.onmoim.server.post.dto.internal.PostLikeBatchResult;
+import com.onmoim.server.post.entity.PostLike;
+import com.onmoim.server.post.entity.GroupPost;
+import com.onmoim.server.user.entity.User;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class PostLikeQueryServiceTest {
 
     @Mock
@@ -33,17 +41,17 @@ class PostLikeQueryServiceTest {
         // given
         Long postId = 1L;
         Long userId = 1L;
-        List<Long> likedPostIds = Arrays.asList(1L);
 
-        when(postLikeRepository.findLikedPostIdsByUserAndPostIds(List.of(postId), userId))
-                .thenReturn(likedPostIds);
+        PostLike activeLike = createMockPostLike(postId, userId, true);
+        when(postLikeRepository.findByPostIdIn(List.of(postId)))
+                .thenReturn(List.of(activeLike));
 
         // when
         boolean result = postLikeQueryService.isLikedByUser(postId, userId);
 
         // then
         assertThat(result).isTrue();
-        verify(postLikeRepository).findLikedPostIdsByUserAndPostIds(List.of(postId), userId);
+        verify(postLikeRepository).findByPostIdIn(List.of(postId));
     }
 
     @Test
@@ -52,17 +60,18 @@ class PostLikeQueryServiceTest {
         // given
         Long postId = 1L;
         Long userId = 1L;
-        List<Long> emptyList = Arrays.asList();
 
-        when(postLikeRepository.findLikedPostIdsByUserAndPostIds(List.of(postId), userId))
-                .thenReturn(emptyList);
+        // 다른 사용자나 비활성 좋아요만 있는 경우
+        PostLike otherUserLike = createMockPostLike(postId, 2L, true);
+        when(postLikeRepository.findByPostIdIn(List.of(postId)))
+                .thenReturn(List.of(otherUserLike));
 
         // when
         boolean result = postLikeQueryService.isLikedByUser(postId, userId);
 
         // then
         assertThat(result).isFalse();
-        verify(postLikeRepository).findLikedPostIdsByUserAndPostIds(List.of(postId), userId);
+        verify(postLikeRepository).findByPostIdIn(List.of(postId));
     }
 
     @Test
@@ -84,17 +93,20 @@ class PostLikeQueryServiceTest {
     void getLikeCount() {
         // given
         Long postId = 1L;
-        Long expectedCount = 10L;
 
-        when(postLikeRepository.countActiveLikesByPostId(postId))
-                .thenReturn(expectedCount);
+        PostLike activeLike1 = createMockPostLike(postId, 1L, true);
+        PostLike activeLike2 = createMockPostLike(postId, 2L, true);
+        PostLike inactiveLike = createMockPostLike(postId, 3L, false);
+
+        when(postLikeRepository.findByPostIdIn(List.of(postId)))
+                .thenReturn(List.of(activeLike1, activeLike2, inactiveLike));
 
         // when
         Long result = postLikeQueryService.getLikeCount(postId);
 
         // then
-        assertThat(result).isEqualTo(expectedCount);
-        verify(postLikeRepository).countActiveLikesByPostId(postId);
+        assertThat(result).isEqualTo(2L); // 활성 좋아요 2개
+        verify(postLikeRepository).findByPostIdIn(List.of(postId));
     }
 
     @Test
@@ -103,35 +115,29 @@ class PostLikeQueryServiceTest {
         // given
         List<Long> postIds = Arrays.asList(1L, 2L);
         Long userId = 1L;
-        List<PostLikeRepository.PostLikeCountProjection> mockResults = Arrays.asList(
-                new PostLikeRepository.PostLikeCountProjection() {
-                    @Override public Long getPostId() { return 1L; }
-                    @Override public Long getLikeCount() { return 5L; }
-                },
-                new PostLikeRepository.PostLikeCountProjection() {
-                    @Override public Long getPostId() { return 2L; }
-                    @Override public Long getLikeCount() { return 3L; }
-                }
-        );
-        List<Long> mockLikedPostIds = Arrays.asList(1L); // 1번 게시글만 좋아요
 
-        when(postLikeRepository.countActiveLikesByPostIds(postIds))
-                .thenReturn(mockResults);
-        when(postLikeRepository.findLikedPostIdsByUserAndPostIds(postIds, userId))
-                .thenReturn(mockLikedPostIds);
+        List<PostLike> mockLikes = Arrays.asList(
+            createMockPostLike(1L, 1L, true),  // 1번 게시글에 1번 사용자 좋아요
+            createMockPostLike(1L, 2L, true),  // 1번 게시글에 2번 사용자 좋아요
+            createMockPostLike(1L, 3L, false), // 1번 게시글에 3번 사용자 비활성 좋아요
+            createMockPostLike(2L, 2L, true),  // 2번 게시글에 2번 사용자 좋아요
+            createMockPostLike(2L, 3L, true)   // 2번 게시글에 3번 사용자 좋아요
+        );
+
+        when(postLikeRepository.findByPostIdIn(postIds))
+                .thenReturn(mockLikes);
 
         // when
         PostLikeBatchResult result = postLikeQueryService.getPostLikeBatchResult(postIds, userId);
 
         // then
-        assertThat(result.getLikeCount(1L)).isEqualTo(5L);
-        assertThat(result.getLikeCount(2L)).isEqualTo(3L);
-        assertThat(result.isLikedByUser(1L)).isTrue();   // 1번 게시글은 좋아요
-        assertThat(result.isLikedByUser(2L)).isFalse();  // 2번 게시글은 좋아요 안함
+        assertThat(result.getLikeCount(1L)).isEqualTo(2L); // 1번 게시글 활성 좋아요 2개
+        assertThat(result.getLikeCount(2L)).isEqualTo(2L); // 2번 게시글 활성 좋아요 2개
+        assertThat(result.isLikedByUser(1L)).isTrue();     // 1번 게시글은 1번 사용자가 좋아요
+        assertThat(result.isLikedByUser(2L)).isFalse();    // 2번 게시글은 1번 사용자가 좋아요 안함
         assertThat(result.getLikedPostCount()).isEqualTo(1L);
 
-        verify(postLikeRepository).countActiveLikesByPostIds(postIds);
-        verify(postLikeRepository).findLikedPostIdsByUserAndPostIds(postIds, userId);
+        verify(postLikeRepository, times(2)).findByPostIdIn(postIds);
     }
 
     @Test
@@ -140,31 +146,27 @@ class PostLikeQueryServiceTest {
         // given
         List<Long> postIds = Arrays.asList(1L, 2L);
         Long nullUserId = null;
-        List<PostLikeRepository.PostLikeCountProjection> mockResults = Arrays.asList(
-                new PostLikeRepository.PostLikeCountProjection() {
-                    @Override public Long getPostId() { return 1L; }
-                    @Override public Long getLikeCount() { return 5L; }
-                },
-                new PostLikeRepository.PostLikeCountProjection() {
-                    @Override public Long getPostId() { return 2L; }
-                    @Override public Long getLikeCount() { return 3L; }
-                }
+
+        List<PostLike> mockLikes = Arrays.asList(
+            createMockPostLike(1L, 1L, true),
+            createMockPostLike(2L, 2L, true)
         );
 
-        when(postLikeRepository.countActiveLikesByPostIds(postIds))
-                .thenReturn(mockResults);
+        when(postLikeRepository.findByPostIdIn(postIds))
+                .thenReturn(mockLikes);
 
         // when
         PostLikeBatchResult result = postLikeQueryService.getPostLikeBatchResult(postIds, nullUserId);
 
         // then
-        assertThat(result.getLikeCount(1L)).isEqualTo(5L);
-        assertThat(result.getLikeCount(2L)).isEqualTo(3L);
+        assertThat(result.getLikeCount(1L)).isEqualTo(1L);
+        assertThat(result.getLikeCount(2L)).isEqualTo(1L);
         assertThat(result.isLikedByUser(1L)).isFalse(); // 비로그인 사용자는 모두 false
         assertThat(result.isLikedByUser(2L)).isFalse();
         assertThat(result.getLikedPostCount()).isEqualTo(0L);
 
-        verify(postLikeRepository).countActiveLikesByPostIds(postIds);
+        // fetchLikeCountMap에서만 호출됨 (getLikedPostIds는 nullUser에서 early return)
+        verify(postLikeRepository, times(1)).findByPostIdIn(postIds);
     }
 
     @Test
@@ -173,22 +175,25 @@ class PostLikeQueryServiceTest {
         // given
         Long postId = 1L;
         Long userId = 1L;
-        Long expectedCount = 5L;
-        List<Long> likedPostIds = Arrays.asList(1L);
 
-        when(postLikeRepository.countActiveLikesByPostId(postId))
-                .thenReturn(expectedCount);
-        when(postLikeRepository.findLikedPostIdsByUserAndPostIds(List.of(postId), userId))
-                .thenReturn(likedPostIds);
+        List<PostLike> mockLikes = Arrays.asList(
+            createMockPostLike(postId, userId, true),
+            createMockPostLike(postId, 2L, true),
+            createMockPostLike(postId, 3L, false) // 비활성
+        );
+
+        when(postLikeRepository.findByPostIdIn(List.of(postId)))
+                .thenReturn(mockLikes);
 
         // when
         PostLikeInfo result = postLikeQueryService.getPostLikeInfo(postId, userId);
 
         // then
-        assertThat(result.likeCount()).isEqualTo(5L);
-        assertThat(result.isLiked()).isTrue();
-        verify(postLikeRepository).countActiveLikesByPostId(postId);
-        verify(postLikeRepository).findLikedPostIdsByUserAndPostIds(List.of(postId), userId);
+        assertThat(result.likeCount()).isEqualTo(2L); // 활성 좋아요 2개
+        assertThat(result.isLiked()).isTrue(); // 해당 사용자 좋아요함
+
+        // getPostLikeInfo는 내부적으로 getLikeCount와 isLikedByUser를 호출하므로 총 2번 호출
+        verify(postLikeRepository, times(2)).findByPostIdIn(List.of(postId));
     }
 
     @Test
@@ -205,5 +210,24 @@ class PostLikeQueryServiceTest {
         assertThat(result.likeInfoByPostId()).isEmpty();
         assertThat(result.likedPostIds()).isEmpty();
         assertThat(result.getLikedPostCount()).isEqualTo(0L);
+
+    }
+
+    /**
+     * 테스트용 Mock PostLike 생성 헬퍼 메서드
+     */
+    private PostLike createMockPostLike(Long postId, Long userId, boolean isActive) {
+        GroupPost mockPost = mock(GroupPost.class);
+        User mockUser = mock(User.class);
+        PostLike mockPostLike = mock(PostLike.class);
+
+        when(mockPost.getId()).thenReturn(postId);
+        when(mockUser.getId()).thenReturn(userId);
+        when(mockPostLike.getPost()).thenReturn(mockPost);
+        when(mockPostLike.getUser()).thenReturn(mockUser);
+        when(mockPostLike.isActive()).thenReturn(isActive);
+        when(mockPostLike.getDeletedDate()).thenReturn(isActive ? null : java.time.LocalDateTime.now());
+
+        return mockPostLike;
     }
 }
